db.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  namespace: testing
spec:
  serviceName: "database"
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
        role: db-tier
    spec:
      containers:
      - name: database
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: database-data
          mountPath: /var/lib/mysql  # Standard MySQL data directory
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
  volumeClaimTemplates:
  - metadata:
      name: database-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi  # Adjust the size as needed
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: testing
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
