egress-policy-backend-to-external-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: machx-dev
  name: egress-to-external-mysql
  namespace: testing
spec:
  egress:
    - ports:
        - port: 3306
          protocol: TCP
      to:
        - ipBlock:
            cidr: 192.168.99.4/32
  podSelector:
    matchLabels:
      role: backend-tier
  policyTypes:
    - Egress
